--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -2,9 +2,8 @@
   <button mat-icon-button (click)="drawer.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
-  <a href="#home" class="title">NgxMatCombobox examples
-    <span>(package version {{ $any(pkg).version }})</span>
-  </a>
+  <a mat-button href="#home">NgxMatCombobox</a>
+  <span class="version">{{ $any(pkg).version }}</span>
   <a class="github" mat-button target="_blank" href="https://github.com/w3soto/ngx-mat-combobox">
     <mat-icon svgIcon="github"></mat-icon>
     GitHub
